# GraphicEngine

./: CMakeLists.txt  Color.cpp  Color.h  Face.cpp  Face.h  Figure.cpp  Figure.h  InfLight.cpp  InfLight.h  Inleiding.cpp  Light.cpp  Light.h  Line2D.cpp  Line2D.h  PlatBody.cpp  PlatBody.h  Point2D.cpp  Point2D.h  PointLight.cpp  PointLight.h  README.md  ZBuffer.cpp  ZBuffer.h  engine.cc  engineL2D.cc  engineL3D.cc  enginePlat.cc  enigineDonker.cc  teken2D.cpp  teken2D.h  teken3D.cpp  teken3D.h  test.cpp
